add: filtraggio dei dati del database nella home page + nuova route per la stampa di tutti i dati non filtrati

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -52,3 +52,12 @@ body {
   color: #078080;
 }
 
+.btn {
+  background-color: #001858;
+  color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  margin: 50px 300px;
+}
+
