--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,3 +53,12 @@ body {
         }
     }
 }
+
+.btn {
+    background-color: #001858;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    margin: 50px 300px;
+}
